--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.0.1",
+    "downloadjs": "^1.4.7",
     "faker": "^6.6.6",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/downloadjs": "^1.4.3",
     "react-router-dom": "^6.5.0"
   }
 }
